# CappyTheGame

./: .gitignore  CMakeLists.txt  README.md
src/: Application.cpp  Application.h  CMakeLists.txt  Object2D.cpp  Object2D.h  Rectangle2D.cpp  Rectangle2D.h  SDLGameCmake.cpp  SDLGameCmake.h  Scene.cpp  Scene.h  main.cpp
